--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -4,19 +4,20 @@
   </td>
   <td>
     <h4><%= product.name %></h4>
-    <br>
+    <br />
     <p><%= product.description %></p>
   </td>
   <td>
     <%= product.category.name %>
   </td>
   <td>
-    <%= product.price %>
+    <%= humanized_money_with_symbol product.price %>
   </td>
   <td>
     <%= product.quantity %>
   </td>
   <td>
-    <%= link_to fa_icon('trash'), [:admin, product], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to fa_icon('trash'), [:admin, product], class: 'btn btn-sm
+    btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
   </td>
 </tr>
