--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -18,7 +18,7 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
-  <% if product.quantity != 0 %>
+  <% if product.quantity == 0 %>
   <aside class="soldout">
     SOLD OUT!
   </aside>
