--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,58 @@
 <section class="orders-show">
-
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <h2><%= @order.email %></h2>
   </header>
+
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @enhanced_line_items.each do |li, product| %>
+          <tr>
+            <td>
+              <%= image_tag product.image.tiny %>
+            </td>
+            <td>
+              <h4><%= product.name %></h4>
+              <br />
+              <p><%= product.description %></p>
+            </td>
+            <td>
+              <%= humanized_money_with_symbol(li.item_price_cents / 100) %>
+            </td>
+            <td>
+              <%= li.quantity %>
+            </td>
+            <td>
+              <%= humanized_money_with_symbol(li.total_price_cents / 100) %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= humanized_money_with_symbol(@total / 100) %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
-
 </section>
